# antivirus

./: .gitignore  CMakeLists.txt
antivirus_gui/: CMakeLists.txt  icons.qrc
antivirus_gui/resources/: style.css
antivirus_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
antivirus_gui_2/: go.mod  main.go
antivirus_gui_2/resources/: bundled.go  resources.go
antivirus_gui_3/: antivirus_gui.cpp  antivirus_gui.h  antivirus_gui_3.aps  antivirus_gui_3.rc  antivirus_gui_3.vcxproj  antivirus_gui_3.vcxproj.filters  messages.h  resource.h
antivirus_service/: CMakeLists.txt  Channel.ixx  FileStream.ixx  Logger.ixx  SampleService.vcxproj  SampleService.vcxproj.filters  Scanner.ixx  antivirus_service.cpp  antivirus_service.h  antivirus_service.sln  base.bin.bak  exceptions.h
database_redactor/: CMakeLists.txt  CMakeLists.txt.user.86068c2  project.pro
database_redactor/resources/: resources.rc
database_redactor/src/: app.cpp  app.h  app.ui  main.cpp  qcreatedatabasewidget.cpp  qcreatedatabasewidget.h  signaturestable.cpp  signaturestable.h
